# Connect3r

./: .env  Dockerfile  README.md  build-container.sh  docker-compose.yml  pyproject.toml  temp
.github/workflows/: codeql.yml
connect3r/: __init__.py
connect3r/exceptions/: __init__.py
connect3r/objects/: Kex_packet.py  SSHClient.py  TCPSession.py  __init__.py  data_classes.py
connect3r/templates/: __init__.py
setup/: detect_platform.py  setup.py
setup/scripts/: get_docker_path.py  linux-build-container.sh  mac-build-container.sh  windows-build-container.ps1
tests/: Simple_SSH_Connection.py  test_container.py  verify_container.py
tests/Docker/: test_container.py  verify_container.py
